<resources>
    <string name="app_name">E-Invoice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>
    <string name="bill_info">Bill info</string>
    <string name="rescan">Rescan</string>
    <string name="open_gallery">Open gallery</string>
    <string name="user_camera_to_scan">Use the camera to scan</string>
    <string name="pick_an_image">Pick an image</string>
    <string name="or">Or</string>
    <string name="empty_VAT_registration_number">VAT registration number not found</string>
    <string name="ok">ok</string>
    <string name="scanner_needs_camera_permission">Scanner need camera permission</string>
    <string name="to_scan_qr_code">to scan qr code</string>
    <string name="turn_on">Turn on</string>
    <string name="empty_string" />
</resources>